MEDIUM / Working on GINA refactoring